# demo-drf

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
profiles/: asgi.py  settings.py  wsgi.py
profiles_api/: apps.py  models.py  paginators.py  serializers.py  urls.py  views.py
profiles_api/signals/: handlers.py
